add(api): open_shift endpoint
It can be used to know the status of the current clock-in, if any

--- a/src/.env.example
+++ b/src/.env.example
@@ -4,6 +4,7 @@ SESSION_URL=${BASE_URL}/sessions
 LOGIN_URL=${BASE_URL}/users/sign_in
 CLOCK_IN_URL=${BASE_URL}/attendance/shifts/clock_in
 CLOCK_OUT_URL=${BASE_URL}/attendance/shifts/clock_out
+OPEN_SHIFT_URL=${BASE_URL}/attendance/shifts/open_shift
 
 # Session
 COOKIE_FILE=cookie.txt
