--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,16 @@
 beautifulsoup4==4.12.2
+black==23.7.0
 bs4==0.0.1
+certifi==2023.5.7
+charset-normalizer==3.2.0
+click==8.1.5
+idna==3.4
+isort==5.12.0
+mypy-extensions==1.0.0
+packaging==23.1
+pathspec==0.11.1
+platformdirs==3.8.1
 python-dotenv==1.0.0
+requests==2.31.0
 soupsieve==2.4.1
+urllib3==2.0.3
