add(env): aggiunta lingue nel base url

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,5 +1,6 @@
 # Endpoints
-BASE_URL=https://api.factorialhr.com
+LANG=it
+BASE_URL=https://api.factorialhr.com/${LANG}
 SESSION_URL=${BASE_URL}/sessions
 LOGIN_URL=${BASE_URL}/users/sign_in
 CLOCK_IN_URL=${BASE_URL}/attendance/shifts/clock_in
