fix: la lingua è richiesta solo negli endpoint di login

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,8 +1,8 @@
 # Endpoints
 LANG=it
-BASE_URL=https://api.factorialhr.com/${LANG}
-SESSION_URL=${BASE_URL}/sessions
-LOGIN_URL=${BASE_URL}/users/sign_in
+BASE_URL=https://api.factorialhr.com/
+SESSION_URL=${BASE_URL}/${LANG}/sessions
+LOGIN_URL=${BASE_URL}/${LANG}/users/sign_in
 CLOCK_IN_URL=${BASE_URL}/attendance/shifts/clock_in
 CLOCK_OUT_URL=${BASE_URL}/attendance/shifts/clock_out
 OPEN_SHIFT_URL=${BASE_URL}/attendance/shifts/open_shift
