add: API per recuperare i periods

--- a/src/.env.example
+++ b/src/.env.example
@@ -7,6 +7,7 @@ CLOCK_IN_URL=${BASE_URL}/attendance/shifts/clock_in
 CLOCK_OUT_URL=${BASE_URL}/attendance/shifts/clock_out
 OPEN_SHIFT_URL=${BASE_URL}/attendance/shifts/open_shift
 SHIFTS_URL=${BASE_URL}/attendance/shifts
+PERIODS_URL=${BASE_URL}/attendance/periods
 
 # Credentials
 EMAIL=
