--- a/src/.env.example
+++ b/src/.env.example
@@ -8,6 +8,7 @@ CLOCK_OUT_URL=${BASE_URL}/attendance/shifts/clock_out
 OPEN_SHIFT_URL=${BASE_URL}/attendance/shifts/open_shift
 SHIFTS_URL=${BASE_URL}/attendance/shifts
 PERIODS_URL=${BASE_URL}/attendance/periods
+LEAVES_URL=${BASE_URL}/leaves
 
 # Credentials
 EMAIL=
