Moved config and constants in config.py

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,5 @@
-# Endpoints
+# Lang
 LANG=it
-BASE_URL=https://api.factorialhr.com/
-LOGIN_URL=${BASE_URL}/${LANG}/users/sign_in
-SESSION_URL=${BASE_URL}/sessions
-CLOCK_IN_URL=${BASE_URL}/attendance/shifts/clock_in
-CLOCK_OUT_URL=${BASE_URL}/attendance/shifts/clock_out
-OPEN_SHIFT_URL=${BASE_URL}/attendance/shifts/open_shift
-SHIFTS_URL=${BASE_URL}/attendance/shifts
-PERIODS_URL=${BASE_URL}/attendance/periods
-LEAVES_URL=${BASE_URL}/leaves
 
 # Credentials
 EMAIL=
